Fixed mobile styling issues for [YourEvent] and [EventInvites] - add sticky elements to [YourEvent] on the data, trying to get it exactly like google calendar but I struck out. Have to reorganize code a bit to do that... leave this for another day - found the error in EventInvites btw... its because im using ThemeProvider to do the coloring.. remove ThemeProvider and everything is cool. But then I would have to manually input all the colors.... again reorganization that would take too long ... leave this for another day

--- a/src/views/YourEvents/components/CondensedEvent.scss
+++ b/src/views/YourEvents/components/CondensedEvent.scss
@@ -8,7 +8,9 @@
   height: 5vh;
   font-size: 1em;
   text-align: center;
-
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
 }
 
 .condensedevent__card {
@@ -99,18 +101,12 @@
 }
 
  .condensedevent__container-namesEmails {
-   max-height: 48px;
-   content:'';
-   clear:both;
-   white-space: nowrap;
+   height: 48px;
    padding-top: 5px;
-   overflow: hidden;
-   margin-bottom: 5px;
    width: 315px;
-
-
+   display: flex;
    padding:0;
-
+   overflow: hidden;
 
 
  }
@@ -140,12 +136,13 @@
 
 .condensedevent__container-namesEmails-chips{
   height:100%;
-  flex-wrap: wrap;
-  display: flex;
   margin: 0;
   padding: 0;
   overflow: hidden;
+  clip: auto;
   float: left;
+  position: relative;
+
 
 }
 .condensedevent_container-namesEmails-dropDown{
